--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -44,6 +44,7 @@ body {
 body, input, button, textarea {
     /* font-wight: 500 font-size: 1.6rem  font-family: Poppins;*/
     font: 500 1.6rem Poppins;
+    color: var(--color-text-base);
 }
 
 .container{ 
