--- a/src/pages/TeacherList/styles.css
+++ b/src/pages/TeacherList/styles.css
@@ -11,8 +11,6 @@
     color: var(--color-text-in-primary);
 }
 
-
-
 #page-teacher-list main {
     margin: 3.2rem auto;
     width: 90%;
@@ -34,6 +32,10 @@
     }
 
     #search-teachers .input-block + .input-block {
+        margin-top: 0;
+    }
+
+    #search-teachers .select-block + .select-block {
         margin-top: 0;
     }
 
